updated footer content

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Welcome to the Weather Forecast App</h1>
     <footer>Coded by
-        <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a>, code hosted on 
-        <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> Github</a> and website hosted on
+        <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a>, is open-sourced on 
+        <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> Github</a> and hosted on
         <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> Netlify</a>
     </footer>
 </body>
