added html to the project

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the Weather Forecast App</h1>
-    <footer>Coded by
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city.." required/>
+            <input type="submit" value="Search"/>
+        </form>
+    </header>
+    <main>
+        <h1>Paris</h1>
+        <p>
+            Tuesday 14:49, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3,13km/h
+        </p>
+       <div>🌤️ 12°C</div>
+    </main>
+    <footer>
+        This project was coded by
         <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a>, is open-sourced on 
         <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> Github</a> and hosted on
         <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> Netlify</a>
