--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter a city.." required/>
@@ -23,9 +28,10 @@
     </main>
     <footer>
         This project was coded by
-        <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a>, is open-sourced on 
-        <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> Github</a> and hosted on
-        <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> Netlify</a>
+        <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a> and is  
+        <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> open-sourced on Github</a> and
+        <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> hosted on Netlify</a>
     </footer>
+</div>
 </body>
 </html>
