--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="weather-app">
-    <header>
-        <form>
-            <input type="search" placeholder="Enter a city.." required/>
-            <input type="submit" value="Search"/>
-        </form>
-    </header>
-    <main>
-        <h1>Paris</h1>
-        <p>
-            Tuesday 14:49, scattered clouds
-            <br />
-            Humidity: 66%, Wind: 3,13km/h
-        </p>
-       <div>🌤️ 12°C</div>
-    </main>
-    <footer>
-        This project was coded by
-        <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a> and is  
-        <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> open-sourced on Github</a> and
-        <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> hosted on Netlify</a>
-    </footer>
-</div>
+        <header>
+            <form class="search-form">
+                <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+                <input type="submit" value="Search" class="search-form-btn" />
+            </form>
+        </header>
+
+        <main>
+            <div class="weather-app-data">
+                <div>
+                    <h1 class="weather-app-city">Paris</h1>
+                    <p class="weather-app-details">
+                        Tuesday 14:49, scattered clouds
+                        <br />
+                        Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+                    </p>
+                </div>
+                <div class="weather-app-temperature-container">
+                    <div class="weather-app-icon">🌤️</div>
+                    <div class="weather-app-temperature">12</div>
+                    <div class="weather-app-unit">°C</div>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            This project was coded by
+            <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a> and is
+            <a href="https://github.com/mashudu08/weather-forecast" target="_blank"> open-sourced on Github</a> and
+            <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> hosted on Netlify</a>
+        </footer>
+    </div>
 </body>
+
 </html>
