--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <div class="weather-app">
         <header>
-            <form class="search-form">
-                <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+            <form class="search-form" id="search-form">
+                <input type="search" placeholder="Enter a city.." required class="search-form-input" id="search-form-input"/>
                 <input type="submit" value="Search" class="search-form-btn" />
             </form>
         </header>
@@ -24,7 +24,7 @@
         <main>
             <div class="weather-app-data">
                 <div>
-                    <h1 class="weather-app-city">Paris</h1>
+                    <h1 class="weather-app-city" id="city">Paris</h1>
                     <p class="weather-app-details">
                         Tuesday 14:49, scattered clouds
                         <br />
@@ -46,6 +46,7 @@
             <a href="https://weatherforecast-shecodes-app.netlify.app" target="_blank"> hosted on Netlify</a>
         </footer>
     </div>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
