--- a/index.html
+++ b/index.html
@@ -39,8 +39,25 @@
                     <div class="weather-app-unit">°C</div>
                 </div>
             </div>
+            <div class="weather-forecast">
+                <div class="row">
+                    <div class="col-2">
+                        <div class="weather-forecast-date">Thu</div>
+                        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" 
+                        width="42"/>
+                        <div class="weather-forecast-temperatures">
+                            <span class="weather-forecast-temperature-max">
+                                18°
+                            </span>
+                            <span class="weather-forecast-temperature-min">
+                                12°
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
-
+ 
         <footer>
             This project was coded by
             <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a> and is
@@ -50,5 +67,4 @@
     </div>
     <script src="src/index.js"></script>
 </body>
-
 </html>
