injected the forecast html from javascript

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="weather-app">
         <header>
             <form class="search-form" id="search-form">
-                <input type="search" placeholder="Enter a city.." required class="search-form-input" id="search-form-input"/>
+                <input type="search" placeholder="Enter a city.." required class="search-form-input"
+                    id="search-form-input" />
                 <input type="submit" value="Search" class="search-form-btn" />
             </form>
         </header>
@@ -28,7 +29,7 @@
                     <h1 class="weather-app-city" id="city"></h1>
                     <p class="weather-app-details">
                         <span id="time"></span>,
-                             <span id="description"></span>
+                        <span id="description"></span>
                         <br />
                         Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
                     </p>
@@ -39,25 +40,8 @@
                     <div class="weather-app-unit">°C</div>
                 </div>
             </div>
-            <div class="weather-forecast">
-                <div class="row">
-                    <div class="col-2">
-                        <div class="weather-forecast-date">Thu</div>
-                        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" 
-                        width="42"/>
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max">
-                                18°
-                            </span>
-                            <span class="weather-forecast-temperature-min">
-                                12°
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="weather-forecast" id="forecast"></div>
         </main>
- 
         <footer>
             This project was coded by
             <a href="https://github.com/mashudu08" target="_blank"> Mashudu Luvhengo</a> and is
@@ -67,4 +51,5 @@
     </div>
     <script src="src/index.js"></script>
 </body>
+
 </html>
